--- a/app/views/admin/file_uploads/_form.html.slim
+++ b/app/views/admin/file_uploads/_form.html.slim
@@ -4,9 +4,8 @@
   .form-group
     .field
       = f.label :description
-      = f.text_field :description, class: 'form-control'
+      = f.text_field :description, class: 'form-control', required: true
   .form-group
     .field
-      = f.file_field :file
-  / i18n-tasks-use t('helpers.submit.file_upload.create')
+      = f.file_field :file, required: true
   .actions = f.submit class: 'btn btn-primary'
